<resources>
    <string name="app_name">Boutique</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Mobile Number</string>
    <string name="enter_userName">Enter Name</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="already_account">Already Have an Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="wishlist">Wishlist</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="category">Category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">PRODUCTS</string>
    <string name="products_small">Products</string>
    <string name="products_detail">Products Details</string>
    <string name="our_popular_products">Our Products</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="add_to_wishlist">ADD TO WISHLIST</string>
    <string name="cart_view">Cart View</string>
    <string name="skip">Skip</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_passwor">Enter Confirm Password</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="payment">Payment</string>
    <string name="email">Email</string>
    <string name="card_number">Card number..</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="amount">Amount</string>
    <string name="next">Next</string>
    <string name="price_detail">Price Detail</string>
    <string name="order_total">Order Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_payable">Total Payable</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="no_data_found">No Data Found</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="select_size">Select Size</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_details">Product Details</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="address">Address</string>
    <string name="city_district">City/District</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_of_address">Type of Address</string>
    <string name="office_commercial">Office/Commercial</string>
    <string name="is_your_office_on_weekends">Is your office on weekends?</string>
    <string name="open_on_saturdays">Open on Saturdays</string>
    <string name="please_select_sizes">Please Select Sizes</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="dob">DOB</string>
    <string name="update">Update</string>
    <string name="wishlist_empty">WishList Empty</string>
    <string name="edit">Edit</string>
    <string name="add_new_address">Add new address</string>
    <string name="order_successfully_placed">Order Successfully Placed</string>
    <string name="history">History</string>
    <string name="accounts">Account</string>
</resources>
