<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kftsoftwares.boutique.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_blue"

            />

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_update_green_logo" />


        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/username_new"
            android:fontFamily="@font/whitney_medium"
            android:hint="@string/enter_userName"
            android:inputType="text" />


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/email_new"
            android:fontFamily="@font/whitney_medium"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/phone"
            android:fontFamily="@font/whitney_medium"
            android:maxLength="10"
            android:hint="@string/enter_confirm_password"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/password_new"
            android:fontFamily="@font/whitney_medium"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/sign_in_button"
            android:fontFamily="@font/whitney_medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"

            android:textColor="@android:color/white" />

        <com.kftsoftwares.boutique.utils.TextViewRegular
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_account"
            android:textColor="@color/tabLayout"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
