<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kftsoftwares.boutique.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_blue"

            />

        <ImageView
    android:layout_width="@dimen/_120sdp"
    android:layout_height="@dimen/_120sdp"
    android:src="@drawable/ic_update_green_logo"
    android:scaleType="fitCenter"
    android:layout_marginTop="@dimen/_15sdp"
    android:contentDescription="@string/app_name"
    android:layout_gravity="center_horizontal"
    />


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/whitney_medium"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableStart="@mipmap/email_new"
        />




        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:fontFamily="@font/whitney_medium"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableStart="@mipmap/password_new"

            />


    <com.kftsoftwares.boutique.utils.TextViewRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/forget_password"
        android:textColor="@color/tabLayout"
        android:gravity="end"
        android:layout_gravity="end"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:id="@+id/signIn_button"
        android:fontFamily="@font/whitney_medium"
        android:textColor="@android:color/white"
        android:background="@drawable/sign_in_button"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/tabLayout"
        android:id="@+id/signUp_button"
        android:fontFamily="@font/whitney_medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@drawable/sign_up_button"
        />


        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="10sp"
            android:textColor="@color/white"
            android:id="@+id/skip1"
            android:visibility="gone"
            android:fontFamily="@font/whitney_medium"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:background="@drawable/skip_button"
            />


    </LinearLayout>
</ScrollView>
