<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeded"
    android:orientation="vertical">

    <com.kftsoftwares.boutique.utils.TextViewRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_select_sizes"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:background="@mipmap/orange_cancle" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"

        android:id="@+id/view"
        android:layout_below="@+id/imageView"
        android:background="@color/black"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/view"
        android:id="@+id/scrollView"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container"
            android:gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="horizontal"
            />
    </ScrollView>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/scrollView"
    android:background="@color/green"
    android:text="@string/submit"
    android:id="@+id/submit"
    android:textColor="@color/white"
    />

</RelativeLayout>