<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/border_color">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@color/tabLayout">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_left" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:hint="Search..."
            android:background="@drawable/searchbar_background"
            android:drawableStart="@mipmap/search"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/action_bar"
        android:padding="1.5dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/tabLayout"
            android:id="@+id/filter"

            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:text="@string/sort"
            android:id="@+id/sort"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@color/tabLayout"
            tools:ignore="ButtonStyle"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:visibility="gone"
        >

    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/border_color"
        android:horizontalSpacing="1dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp" />

    <RelativeLayout
        android:id="@+id/no_data_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:background="@color/white"


        >

        <com.kftsoftwares.boutique.utils.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"

            />
    </RelativeLayout>
</RelativeLayout>